5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1758_1183.log
== SUBMITION (2019-05-27 22:57:39) 
-- CODE:
from numpy import*
v = arry(eval(input("Numeros inteiros")))
x = 0
a = 0
n = size(v)
while (t<n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		t = t+1
print(v1)

-- EXECUTION TIME:
0.574243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 2, in <module>
    v = arry(eval(input()))
NameError: name 'arry' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:57:43) 
-- CODE:
from numpy import*
v = arry(eval(input("Numeros inteiros")))
x = 0
a = 0
n = size(v)
while (t<n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		t = t+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 22:58:04) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros")))
x = 0
a = 0
n = size(v)
while (t<n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		t = t+1
print(v1)

-- EXECUTION TIME:
0.430361
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 6, in <module>
    while (t<n):
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:58:10) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros")))
x = 0
a = 0
n = size(v)
while (t<n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		t = t+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:58:16) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (t<n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		t = t+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 22:59:18) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (x < n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		t = t+1
print(v1)

-- EXECUTION TIME:
0.456476
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 18, in <module>
    t = t+1
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:59:30) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (x < n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		t = t+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 23:00:11) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (x < n):
	if v[x]<0:
		a =a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x<n):
	if v[x]>=0:
		i = i+1
		x = x+1
	else:
		x= x+1
print(v1)

-- EXECUTION TIME:
0.473159
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:01:57) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (x < n):
	if (v[x]<0):
		a = a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x < n):
	if (v[x]>=0):
		i = i+1
		x = x+1
	else:
		x= x+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:02:27) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (x < n):
	if (v[x]<0):
		a = a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x < n):
	if (v[x]>=0):
		i = i+1
		x = x+1
	else:
		x= x+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:12:14) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (x < n):
	if (v[x]<0):
		a = a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x < n):
	if (v[x]>=0):
		i = i+1
		x = x+1
	else:
		x= x+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:20:34) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
x = 0
a = 0
n = size(v)
while (x < n):
	if (v[x]<0):
		a = a +1
	x = x+1
v1 = zeros(n-a, dtype=int)
x = 0 
i =0
while ( x < n):
	if (v[x]>=0):
		v[i]=v[x]
		i = i+1
		x = x+1
	else:
		x= x+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:23:16) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
t = 0
a = 0
n = size(v)
while (t < n):
	if (v[t]<0):
		a = a +1
	t = t+1
v1 = zeros(n-a, dtype=int)
t = 0 
i =0
while ( t < n):
	if (v[t]>=0):
		v1[i]=v[t]
		i = i+1
		t = t+1
	else:
		t= t+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:23:26) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
t = 0
a = 0
n = size(v)
while (t < n):
	if (v[t]<0):
		a = a +1
	t = t+1
v1 = zeros(n-a, dtype=int)
t = 0 
i =0
while ( t < n):
	if (v[t]>=0):
		v1[i]=v[t]
		i = i+1
		t = t+1
	else:
		t= t+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:23:46) 
-- CODE:
from numpy import*
v = array(eval(input("Numeros inteiros:")))
t = 0
a = 0
n = size(v)
while (t < n):
	if (v[t]<0):
		a = a +1
	t = t+1
v1 = zeros(n-a, dtype=int)
t = 0 
i =0
while ( t < n):
	if (v[t]>=0):
		v1[i]=v[t]
		i = i+1
		t = t+1
	else:
		t= t+1
print(v1)

-- EXECUTION TIME:
0.300629
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
